<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam2</name>
  <version>0.0.0</version>
  <description>三江无人车项目的ORB-SLAM2感知包</description>
  <maintainer email="ssl2001@126.com">sj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sj_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>